--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "guidoune_rain",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://darumacho.github.io/test_test/",
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "gh-pages": "^2.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
