--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "guidoune_rain",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://darumacho.github.io/test_test/",
+  "homepage": "https://darumacho.github.io/test_test",
   "dependencies": {
     "@reach/router": "^1.2.1",
     "react": "^16.8.6",
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
